Favourite investing model added. (Watchlist) Error type changed. Swagger updated. Favourite Investing routes & models added.
